--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Declaración de variables
 
+//Color
 $primary-color: #D9B59D;
 $primary-light-color: #F2E6DE;
 $secondary-color: #A4B7E8;
@@ -7,4 +8,17 @@ $accent-color: #546eb1;
 $tertiary-color: #4E4D49;
 $background-color: #F8F8F8 ;
 $primary-text-color: #1F1F1D;
+
+//Fuente
 $font-stack: "Montserrat";
+$mobile-X: 18px;
+$mobile-M: 16px;
+$mobile-S: 14px;
+
+$tablet-X: 22px;
+$tablet-M: 18px;
+$tablet-S: 16px;
+
+$desktop-X: 26px;
+$desktop-M: 20px;
+$desktop-S: 18px;
